chore: files structure refactored

--- a/components.json
+++ b/components.json
@@ -13,11 +13,11 @@
   "iconLibrary": "lucide",
   "rtl": false,
   "aliases": {
-    "components": "@/app/_components",
-    "utils": "@/app/_lib/utils",
-    "ui": "@/app/_components/ui",
-    "lib": "@/app/_lib",
-    "hooks": "@/app/_hooks"
+    "components": "@/src/_components",
+    "utils": "@/src/_lib/utils",
+    "ui": "@/src/_components/ui",
+    "lib": "@/src/_lib",
+    "hooks": "@/src/_hooks"
   },
   "registries": {}
 }
